# http-dynamix

./: .gitignore  AGENTS.md  Dockerfile  LICENSE  README.md  README.rst  compose.yaml  pyproject.toml
.githooks.d/: pre-commit.10.pre_commit  pre-commit_environment.yml
.github/: dependabot.yml  labeler.yml
.github/workflows/: ci.yml  github-release.yml  labeler.yml  pypi-release.yml
docs/: conf.py  create_markdown.py  index.rst  requirements.txt
docs/_static/: header.rst
docs/api/: http_dynamix.clients.rst  http_dynamix.core.rst  http_dynamix.rst
docs/dev/: contributing.rst
docs/examples/: Dockerfile  compose.yaml
docs/examples/tests/: pytest.ini  test_httpbin_org_service.py
docs/user/: installation.rst  quickstart.rst
src/http_dynamix/: __init__.py  auth.py  enums.py  factory.py  httpx_logger.py  log.py  protocols.py  types.py
src/http_dynamix/clients/: __init__.py  async_client.py  sync_client.py
src/http_dynamix/core/: __init__.py  segment_format.py
tests/: test_async_client_extended.py  test_async_clients.py  test_auth.py  test_cli_integration.py  test_clients.py  test_clients_integration.py  test_factory.py  test_httpx_formatters.py  test_httpx_logger.py  test_log.py  test_logmaster_extended.py  test_segment_format.py  test_sync_client_extended.py  test_sync_clients.py
